<resources>
    <string name="app_name">iCode</string>
    <string name="app_name_cn">代码助手</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_write">撰写</string>
    <string name="prompt_username">帐户名</string>
    <string name="prompt_title">标题</string>
    <string name="prompt_sub_title">副标题</string>
    <string name="prompt_content">内容</string>
    <string name="title_activity_view_code">浏览代码</string>
    <string name="footer_msg_loading">正在加载…</string>
    <string name="footer_msg_no_more">没有更多了，点击重试</string>
    <string name="footer_msg_no_more_favorites">点击代码详情界面右上角的☆以添加收藏</string>
    <string name="footer_msg_failed">加载失败，点击重试</string>
    <string name="press_again_exit">再次按下返回键退出</string>
    <string name="validation_no_name">请输入用户名</string>
    <string name="validation_no_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="nonLogin">未登录</string>
    <string name="home">主页</string>
    <string name="write">发布</string>
    <string name="website">前往官网</string>
    <string name="about">关于</string>
    <string name="pay">捐赠</string>
    <string name="favorite">收藏</string>
    <string name="write_hint">在这写您的代码\(^o^)/~ |System.out.println("Hello World");</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">iCode</string>
    <string name="title_activity_account_code">发布过的代码</string>
    <string name="title_activity_account">账户</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">登录您的账户</string>
    <string name="info_login">登陆账户以便充分利用代码助手</string>
    <string name="info_register">注册账户以便充分利用代码助手</string>
    <string name="prompt_password">密码</string>
    <string name="validation_name_length">用户名必须大于等于3个字符</string>
    <string name="validation_password_length">密码必须大于等于7个字符</string>
    <string name="validation_name_illegal">用户名不合法</string>
    <string name="title_activity_register">注册您的账户</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="login_out">退出账户</string>
    <string name="license_summary">查看开放源代码许可</string>
    <string name="license_title">开放源代码许可</string>
    <string name="falied_reg">注册失败</string>
    <string name="not_Login">未登录</string>

    <!--RelativeDateFormat-->
    <string name="one_second_ago">%1$s秒前</string>
    <string name="one_minute_ago">%1$s分钟前</string>
    <string name="one_hour_ago">%1$s小时前</string>
    <string name="one_day_ago">%1$s天前</string>
    <string name="one_month_ago">%1$s个月前</string>
    <string name="one_year_ago">%1$s年前</string>

    <!--DialogMessage-->
    <string name="exit_user_msg">确定要退出账户？</string>
    <string name="exit_icode_msg">确定要退出iCode?</string>
    <string name="ok_btn">确定</string>
    <string name="no_btn">否</string>
    <string name="cannot_upload">上传失败，错误：</string>
    <string name="upload_success">上传成功</string>
    <string name="sign_up_failed">注册失败，错误：</string>
    <string name="sign_in_failed">登录失败，错误：</string>
    <string name="welcome_to_icode">欢迎加入iCode</string>

    <!--ActivityTitle-->
    <string name="title_activity_write_code">撰写代码</string>
    <string name="title_activity_code_view">CodeViewActivity</string>
    <string name="title_activity_reply_list">评论</string>
    <string name="title_request_permission">需要权限</string>
    <string name="msg_request_permission_read_phone_state">我们需要获得特定权限以确认设备身份，请在接下来弹出的对话框点击“允许”。</string>
    <string name="error_request_permission">获取权限失败</string>
    <string name="title_activity_account_setting">账户设置</string>
    <string name="title_activity_blocks">BlocksActivity</string>
    <string name="block_type_text">文字</string>
    <string name="block_type_code">代码</string>
    <string name="btn_add_text">添加文字</string>
    <string name="btn_add_code">添加代码</string>
    <string name="title_choose_language">请选择语言</string>
    <string name="title_activity_user">用户</string>
    <string name="title_activity_reply">评论区</string>
    <string name="commit">评论</string>
    <string name="change_icon">更改头像</string>
    <string name="resPwd">修改密码</string>
    <string name="oldPwd">原密码</string>
    <string name="newPwd">新密码</string>
    <string name="check_newPwd">确认密码</string>
    <string name="set_account">修改账号</string>
    <string name="add_code_favorite">把它加入收藏列表</string>


    <!--Error-->
    <string name="internet_error">网络错误</string>
    <string name="failed_to_analysis_local_data_error">解析传入的本地数据失败</string>
    <string name="failed_to_analysis_server_data_error">解析来自服务器的数据失败</string>
    <string name="server_unknow_exception_error">服务器发生不可知异常</string>
    <string name="user_not_login_error">用户没有登录</string>
    <string name="cannot_insert_data_to_database_error">数据库无法插入数据</string>
    <string name="check_user_failed_error">验证用户失败</string>
    <string name="user_ban_error">用户被禁止发言</string>
    <string name="sent_code_interval_too_short_error">发布时间间隔太短（至少间隔2分钟）</string>
    <string name="sent_code_reply_five_times_error">回复次数不足5次</string>
    <string name="sent_reply_interval_too_short_error">发布时间间隔太短（至少间隔30秒）</string>
    <string name="user_already_existed">用户名已存在</string>
    <string name="cannot_find_user">找不到用户</string>
    <string name="pwd_too_short">密码过短（最小7位）</string>
    <string name="imei_illegal">imei不合法</string>
    <string name="imei_already_existed">此imei已被注册</string>
    <string name="pwd_error">密码错误</string>
    <string name="cannot_find_id_in_reply_database_error">在数据库中根据id找不到对应的对象</string>
    <string name="id_is_empty_error">id为空</string>
    <string name="cannot_find_id_in_codegood_database_error">在数据库中根据id找不到对应的对象</string>
    <string name="unknow_error">未知错误</string>
    <string name="update">更新</string>
    <string name="version">版本：%1$s</string>

    <!--Settings-->
    <string name="pref_other">其他</string>
    <string name="pref_summary_clear_cache">清理缓存的数据和图片</string>
    <string name="pref_title_clear_cache">清理缓存</string>

    <!--Theme-->
    <string name="pref_theme">主题</string>
    <string name="pref_theme_highlight">语法高亮主题</string>
    <string name="entry_theme_blue">蓝蓝路</string>
    <string name="entry_theme_red">姨妈红</string>
    <string name="entry_theme_purple">紫式部</string>
    <string name="entry_theme_gray">灰鼠</string>
    <string name="entry_theme_yellow">黄藤</string>
    <string name="entry_theme_deepblue">绀青</string>
    <string name="exit">退出</string>

    <!--自动更新-->
	<string name="T_pref_ver">版本号</string>
	<string name="S_pref_ver">Null</string>
    <string name="repo_download_failed_http">Downloading %1$s failed: %2$d (%3$s)</string>
    <string name="repo_download_failed">Downloading %1$s failed: %2$s</string>
    <string name="title_new_version">发现新版本：%1$s</string>
    <string name="msg_new_version">%1$s\n\n大小：%2$s</string>
    <string name="positive_new_version">更新</string>
	
	<!--团队、作者-->
	<string name="S_OSWeb">查看开源项目</string>
	<string name="T_OSWeb">点击查看开源项目</string>
	<string name="pref_studio">团队</string>
	<string name="pref_member">作者</string>
	<string name="S_author_ztc">ztc1997</string>
	<string name="T_author_ztc">Alex Zhang</string>
	<string name="S_author_dzh">Takayama</string>
	<string name="T_author_dzh">Allen Tom</string>
	<string name="S_author_fjy">LolliKit</string>
	<string name="T_author_fjy">JunyuanFeng</string>

</resources>
