<?xml version='1.0' encoding='utf-8'?>
<PreferenceScreen xmlns:android='http://schemas.android.com/apk/res/android'>
  
    <com.rayfantasy.icode.ui.preference.PreferenceCategory android:title='@string/pref_studio'>
		<ImageView
			android:src="@mipmap/studio"
        <Preference
			android:key="OSWeb"
			android:summary="@string/S_OSWeb"
			android:title="@string/T_OSWeb"
    </com.rayfantasy.icode.ui.preference.PreferenceCategory>
	<com.rayfantasy.icode.ui.preference.PreferenceCategory android:title='@string/pref_member'>
		<Preference
			android:key="author_zrc"
			android:summary="@string/S_author_ztc"
			android:title="@string/T_author_ztc"/>
		<Preference
			android:key="author_dzh"
			android:summary="@string/S_author_dzh"
			android:title="@string/T_author_dzh"/>
		<Preference
			android:key="author_fjy"
			android:summary="@string/S_author_fjy"
			android:title="@string/T_author_fjy"/>
	</com.rayfantasy.icode.ui.preference.PreferenceCategory>

</PreferenceScreen>
